infra/k8s/carstiers-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: carsties
  labels:
    name: carsties
