infra/k8s/auction-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-svc
  namespace: carsties
spec:
  selector:
    matchLabels:
      app: auction-svc
  template:
    metadata:
      labels:
        app: auction-svc
    spec:
      containers:
      - name: auction-svc
        image: jjarnot/carsties-auction-svc
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: auction-clusterip
  namespace: carsties
spec:
  type: ClusterIP
  selector:
    app: auction-svc
  ports:
  - port: 80
    targetPort: 80
    name: web
  - port: 7777
    targetPort: 7777
    name: grpc
