infra/k8s/notify-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-svc
  namespace: carsties
spec:
  selector:
    matchLabels:
      app: notify-svc
      namespace: carsties
  template:
    metadata:
      labels:
        app: notify-svc
        namespace: carsties
    spec:
      containers:
      - name: notify-svc
        image: jjarnot/carsties-notify-svc
        imagePullPolicy: Never        
---
apiVersion: v1
kind: Service
metadata:
  name: notify-clusterip
  namespace: carsties
spec:
  type: ClusterIP
  selector:
    app: notify-svc
  ports:
  - port: 80
    targetPort: 80
