infra/k8s/postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: carsties
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/data/postgres
          name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim: 
            claimName: postgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
  namespace: carsties
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  namespace: carsties
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
