infra/k8s/search-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-svc
  namespace: carsties
spec:
  selector:
    matchLabels:
      app: search-svc
  template:
    metadata:
      labels:
        app: search-svc
    spec:
      containers:
      - name: search-svc
        image: jjarnot/carsties-search-svc
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: search-clusterip
  namespace: carsties
spec:
  type: ClusterIP
  selector:
    app: search-svc
  ports:
  - port: 80
    targetPort: 80
